<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.HomePage.ListingSearchFragment">

    <!--suppress AndroidUnresolvableTag -->
    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="416dp"
        android:layout_height="66dp"
        android:layout_marginBottom="5dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:backgroundTint="@color/theme"
        android:clickable="true"
        android:focusable="true"
        android:foregroundTint="@color/theme"
        android:queryHint="Search"></SearchView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/filterSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/filterType" />

        <EditText
            android:id="@+id/filterInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="Enter limit"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/listingCardList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_divider"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>
</LinearLayout>