...
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/background_rounded_preview">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="Title"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
...
