<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/userProfileFragment"
            android:icon="@drawable/icon_profile"
            android:title="Profile" />
        <item
            android:id="@+id/listingSearchFragment"
            android:icon="@drawable/icon_joblistings"
            android:title="View Listings" />
        <item
            android:id="@+id/createListingFragment"
            android:icon="@drawable/icon_jobs_taken"
            android:title="Create Job Posting" />
        <item
            android:id="@+id/signInFragment"
            android:icon="@drawable/icon_signout"
            android:title="Sign Out" />
    </group>
</menu>