...
    tools:context=".UI.User.EditUserProfileFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-26dp">


    <EditText
        android:id="@+id/User_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="Email"
        android:textSize="14sp"
...
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ccv" />

    <Button
        android:id="@+id/submitChangesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:backgroundTint="#1C085D"
...
