...
            android:textColor="@color/white"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/editProfile"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="#1C085D"
        android:text="Edit Profile"
...
